"Bazel dependencies"

module(
    name = "com_bookingcom_rules_pitest",
    compatibility_level = 6,
    version = "v0.0.1",
)

bazel_dep(name = "bazel_skylib", version = "1.4.1")
bazel_dep(name = "platforms", version = "0.0.5")
bazel_dep(name = "gazelle", dev_dependency = True, repo_name = "bazel_gazelle", version = "0.35.0")
bazel_dep(name = "bazel_skylib_gazelle_plugin", dev_dependency = True, version = "1.4.1")
bazel_dep(name = "aspect_bazel_lib", dev_dependency = True, version = "1.32.1")
bazel_dep(name = "buildifier_prebuilt", dev_dependency = True, version = "6.1.2")
bazel_dep(name = "contrib_rules_jvm", version = "0.24.0")
bazel_dep(name = "rules_java", version = "7.4.0")
bazel_dep(name = "rules_jvm_external", version = "6.0")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")

maven.install(
    name = "maven_pitest",
    artifacts = [
        "org.pitest:pitest:1.15.8",
        "org.pitest:pitest-entry:1.15.8",
        "org.pitest:pitest-command-line:1.15.8",
        "org.pitest:pitest-junit5-plugin:1.2.1",
    ],
    fetch_sources = True,
    lock_file = "//:maven_install.json",
)

use_repo(
    maven,
    "maven_pitest",
    "unpinned_maven_pitest",
)
