load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

# For stardoc to reference the files
exports_files(["defs.bzl"])

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    visibility = ["//visibility:public"],
)

alias(
    name = "org_pitest_pitest_command_line",
    actual = "@maven_pitest//:org_pitest_pitest_command_line",
    visibility = ["//visibility:public"],
)

alias(
    name = "org_pitest_pitest_junit5_plugin",
    actual = "@maven_pitest//:org_pitest_pitest_junit5_plugin",
    visibility = ["//visibility:public"],
)
