bazel_dep(name = "com_bookingcom_rules_pitest", version = "0.0.0")
local_path_override(
    module_name = "com_bookingcom_rules_pitest",
    path = "../..",
)

bazel_dep(name = "rules_java", version = "7.4.0")
bazel_dep(name = "rules_jvm_external", version = "6.0")
bazel_dep(name = "contrib_rules_jvm", version = "0.24.0")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    name = "maven",
    artifacts = [
        "org.junit.jupiter:junit-jupiter:5.10.2",
        "org.junit.jupiter:junit-jupiter-engine:5.10.2",
        "org.junit.platform:junit-platform-launcher:1.10.2",
        "org.junit.platform:junit-platform-reporting:1.10.2",
        "org.junit.vintage:junit-vintage-engine:5.10.2",
        "org.assertj:assertj-core:3.25.3",
        "nl.jqno.equalsverifier:equalsverifier:3.15.8",
        "org.mockito:mockito-core:5.11.0",
        "org.mockito:mockito-junit-jupiter:5.11.0",
        "org.junit:junit-bom:5.10.2",
        "pl.pragmatists:JUnitParams:1.1.1",
    ],
    fetch_sources = True,
    lock_file = "//:maven_install.json",
)
use_repo(
    maven,
    "maven",
    "unpinned_maven",
)
