# Override http_archive for local testing
local_repository(
    name = "com_bookingcom_rules_pitest",
    path = "../..",
)

#---SNIP--- Below here is re-used in the workspace snippet published on releases

######################
# rules_pitest setup #
######################
# Fetches the rules_pitest dependencies.
# If you want to have a different version of some dependency,
# you should fetch it *before* calling this.
# Alternatively, you can skip calling this function, so long as you've
# already fetched all the dependencies.
load("@com_bookingcom_rules_pitest//pitest:repositories.bzl", "rules_pitest_dependencies")

rules_pitest_dependencies()
