load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "versions",
    srcs = ["versions.bzl"],
    visibility = ["//pitest:__subpackages__"],
)

bzl_library(
    name = "rules",
    srcs = ["rules.bzl"],
    visibility = ["//pitest:__subpackages__"],
    deps = ["@rules_java//java:defs"],
)
